--- a/developerhub/packages/package.json
+++ b/developerhub/packages/package.json
@@ -3,7 +3,7 @@
         "packages/backend",
         "packages/*"
     ],
-    "packageManager": "yarn@4.4.1+sha512.f825273d0689cc9ead3259c14998037662f1dcd06912637b21a450e8da7cfeb4b1965bbee73d16927baa1201054126bc385c6f43ff4aa705c8631d26e12460f1",
+    "packageManager": "yarn@4.12.0",
     "dependencies": {
         "@roadiehq/scaffolder-backend-module-http-request": "^5.5.1"
     }
