--- a/skeleton/catalog-info.yaml
+++ b/skeleton/catalog-info.yaml
@@ -10,7 +10,7 @@ metadata:
     argocd/app-selector: app.kubernetes.io/instance=${{ values.app_name }}-init
     tektonci.io/pipeline: ${{ values.app_name }}
     tekton.dev/type: pipeline
-    backstage.io/kubernetes-id: quarkusdroneshop
+    rhdh.redhat.com/tekton-enabled: "true"
 spec:
   type: service
   lifecycle: production
