--- a/template.yaml
+++ b/template.yaml
@@ -57,14 +57,12 @@ spec:
         repoVisibility: public
 
     - id: run-pipeline
-      name: Run Tekton Pipeline
-      action: http:backstage:request
+      action: http:request
       input:
         method: POST
-        path: /tekton-trigger
+        url: http://el-backstage-listener.quarkusdroneshop-cicd.svc.cluster.local:8080/
         headers:
           Content-Type: application/json
-          Authorization: ""
         body:
           repoUrl: ${{ steps.publish.output.remoteUrl }}
               
