--- a/template.yaml
+++ b/template.yaml
@@ -15,6 +15,7 @@ spec:
         - git_owner_name
         - git_repo_name
         - cluster_name
+        - image_tag
       properties:
         app_name:
           type: string
@@ -25,6 +26,9 @@ spec:
         cluster_name:
           type: string
           enum: [a-cluster, b-cluster, c-cluster]
+        image_tag:
+          type: string
+          default: latest
 
     - title: 所有者情報
       required: [owner]
@@ -64,37 +68,13 @@ spec:
         argoInstance: main
         namespace: quarkusdroneshop-cicd
         repoUrl: https://github.com/quarkusdroneshop/quarkusdroneshop-reward.git
-        path: pipline/quarkusdroneshop-reword/pipeline
+        path: pipline/quarkusdroneshop-reword
+        # ここで images を上書きして IMAGE_TAG を反映
+        kustomize:
+          images:
+            - name: quarkusdroneshop-reward
+              newTag: ${{ parameters.image_tag }}
 
-    - id: create-pipelinerun
-      name: Create PipelineRun YAML
-      action: filesystem:write
-      input:
-        path: pipelinerun.yaml
-        content: |
-          apiVersion: tekton.dev/v1
-          kind: PipelineRun
-          metadata:
-            name: build-and-push-quarkusdroneshop-reward-run-{{ randomString(5) }}
-            namespace: quarkusdroneshop-cicd
-          spec:
-            pipelineRef:
-              name: build-and-push-quarkusdroneshop-reward
-            workspaces:
-              - name: shared-workspace
-                persistentVolumeClaim:
-                  claimName: shared-workspace
-            params:
-              - name: IMAGE_TAG
-                value: latest
-    
-    - id: apply-pipelinerun
-      name: Apply PipelineRun
-      action: execute:script
-      input:
-        shell: bash
-        script: oc apply -f pipelinerun.yaml    
-            
     - id: register
       name: Backstageに登録
       action: catalog:register
