--- a/template.yaml
+++ b/template.yaml
@@ -77,36 +77,45 @@ spec:
         defaultBranch: main
         repoVisibility: public
 
-    - id: create-pipelinerun
-      name: Tekton PipelineRun YAML 作成
-      action: custom:write-file
+    - id: create-pvc
+      name: Create Workspace PVC
+      action: kubernetes:apply
       input:
-        path: pipelinerun-${{ parameters.app_name }}.yaml
-        content: |
+        namespace: ${{ parameters.namespace }}
+        manifest: |
+          apiVersion: v1
+          kind: PersistentVolumeClaim
+          metadata:
+            name: ${{ parameters.app_name }}-shared-workspace-pvc
+          spec:
+            accessModes:
+              - ReadWriteOnce
+            resources:
+              requests:
+                storage: 5Gi
+                
+    # 🔥 ③ ここで Tekton を直接起動
+    - id: run-tekton
+      name: Run Tekton Pipeline
+      action: kubernetes:apply
+      input:
+        namespace: ${{ parameters.namespace }}
+        manifest: |
           apiVersion: tekton.dev/v1
           kind: PipelineRun
           metadata:
-            name: build-and-push-${{ parameters.app_name }}-{{ randomString(5) }}
-            namespace: ${{ parameters.namespace }}
+            generateName: ${{ parameters.app_name }}-run-
           spec:
             pipelineRef:
               name: ${{ parameters.pipelineName }}
-            workspaces:
-              - name: shared-workspace
-                persistentVolumeClaim:
-                  claimName: shared-workspace
             params:
               - name: IMAGE_TAG
                 value: ${{ parameters.image_tag }}
-
-    - id: push-to-argocd-repo
-      name: GitHub に push (ArgoCD 管理リポジトリ)
-      action: publish:github
-      input:
-        repoUrl: github.com?owner=quarkusdroneshop&repo=quarkusdroneshop-reward
-        files:
-          - pipelinerun-${{ parameters.app_name }}.yaml
-        commitMessage: "Add PipelineRun for ${{ parameters.app_name }}"
+            workspaces:
+              - name: shared-workspace
+                persistentVolumeClaim:
+                  persistentVolumeClaim:
+                    claimName: ${{ parameters.app_name }}-shared-workspace-pvc
 
     - id: deploy-argo
       name: ArgoCD でデプロイ
